<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2017 The Android Things Samples Authors.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">Android Things TensorFlow Image Classifier</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="help_message">Point the camera and touch the screen</string>
    <string name="sendtocloud">Send To Cloud</string>
    <string name="cancel">cancel</string>
    <string name="confirmSendTxt">Send</string>
    <string name="snickersText">Snickers</string>
    <string name="twixText">Twix</string>
    <string name="almondjoyText">Almondjoy</string>
    <string name="babyruthText">Babyruth</string>

</resources>
