<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2017 The Android Things Samples Authors.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:clickable="true"
    android:focusable="false"
    android:onClick="onShutterClick"
    tools:context="com.example.androidthings.imageclassifier.ImageClassifierActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp" />

    <LinearLayout
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/control_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/help_message"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="@string/help_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sendToCloudLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onSendToCloudClick"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/sendToCloudBtn"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onSendToCloudClick"
            android:text="@string/sendtocloud"
            android:visibility="visible" />

        <Button
            android:id="@+id/confirmSendBtn"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onConfirmSendClick"
            android:text="@string/confirmSendTxt"
            android:visibility="invisible"
            tools:text="@string/confirmSendTxt" />

        <Button
            android:id="@+id/cancelBtn"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onCancelClick"
            android:text="@string/cancel"
            android:visibility="visible" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/labelButtons"
        android:layout_width="248dp"
        android:layout_height="158dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="@android:color/holo_green_dark"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/snickersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/snickersText"
            tools:text="@string/snickersText" />

        <RadioButton
            android:id="@+id/twixLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/twixText"
            tools:text="@string/twixText" />

        <RadioButton
            android:id="@+id/babyruthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/babyruthText"
            tools:text="@string/babyruthText" />

        <RadioButton
            android:id="@+id/almondjoyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/almondjoyText"
            tools:text="@string/almondjoyText" />
    </RadioGroup>

</RelativeLayout>
